--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,4 +1,5 @@
 .button {
+  width: 60%;
   background-color: #4CAF50;
   border: none;
   color: white;
@@ -11,10 +12,28 @@
   cursor: pointer;
 }
 
+.formButton {
+  width: 70%;
+  background-color: #4CAF50;
+  border: none;
+  color: white;
+  padding: 30px 50px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 26px;
+  margin: 8px 6px;
+  cursor: pointer;
+}
+
 #bodyDiv {
   margin: auto;
   margin-top: 10%;
-  width: 50%;
+  width: 60%;
   /*border: 3px solid green;*/
   padding: 10px;
+}
+
+form {
+  /*border: 3px solid red;*/
 }
