--- a/templates/index.html
+++ b/templates/index.html
@@ -9,10 +9,10 @@
 <div id="bodyDiv">
   <div class="form">
 
-      <a href="#" class="button">Quick List (just for today)</a>
-      <form action="anotherpage.html" method="POST">
+      <a href="/generateWithoutEmail" class="button">Quick List (just for today)</a>
+      <form action="/generateWithEmail" method="POST">
           <input type="submit" value="Willy List (Forever)" class="formButton"><br>
-          <input type="textarea" placeholder="youremail@example.com" Required="True">
+          <input type="textarea" placeholder="youremail@example.com" Required="True" name="emailtest">
       </form>
   </div>
 </div>
