--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
       <input type="submit" value="Willy List (Forever)" class="formButton"><br>
       <input type="textarea" placeholder="youremail@example.com" Required="True" name="emailtest">
     </form>
-    <a href="/forgotPassword">Forgot password?</a>
+    <a href="/forgotPassword">Forgot WillyList?</a>
   </div>
 </div>
 
