--- a/templates/showlist.html
+++ b/templates/showlist.html
@@ -1,33 +1,67 @@
 {% extends 'base.html' %}
 
 {% block head %}
-<title>What ya doing today? </title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>WillyList</title>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
 {% endblock %}
 
 {% block body %}
-<div class="content">
-    <h1 style="text-align: center">What ya doing today?</h1>
-    <table>
-        <tr>
-            <th>Task</th>
-            <th>Actions</th>
-        </tr>
-        {% for task in tasks %}
-            <tr>
-                <td>{{ task.content }}</td>
-                <td>
-                    <a href="/delete/{{task.id}}/{{vanity}}">Delete</a>
-                    <br>
-                </td>
-            </tr>
-        {% endfor %}
-    </table>
+<section class="hero is-info">
+    <div class="hero-body">
+        <p class="title">
+            Willy List
+        </p>
+        <p class="subtitle">
+            For the fast-paced professional
+        </p>
 
-    <div class="form">
-        <form action="/{{vanity}}" method="POST">
-            <input autofocus type="text" name="content" id="content">
-            <input type="submit" value="Add Task">
-        </form>
     </div>
-</div>
+</section>
+
+<br>
+<section>
+    <div class="container">
+        <div class="tile is-ancestor">
+            <div class="tile is-horizontal">
+                <div class="tile is-parent">
+                    <article class="tile is-child box notification is-warning">
+                        <p class="title">What ya doing today, buddy?</p>
+                        {% for task in tasks %}
+                        <tr>
+                            <td>
+                                <a href="/delete/{{task.id}}/{{vanity}}">Delete</a>
+                            </td>
+                            <td>- {{ task.content }}</td>
+                            <br>
+                        </tr>
+                        {% endfor %}
+                        <br>
+                        <div class="form">
+                            <form action="/{{vanity}}" method="POST">
+                                <div class="field">
+                                    <div class="control">
+                                        <input class="input" type="text" placeholder="Text input" name="content"
+                                            id="content">
+                                    </div>
+                                </div>
+                                <div class="field">
+                                    <div class="control">
+                                        <button class="button is-link">Add</button>
+                                    </div>
+
+                                </div>
+                            </form>
+                        </div>
+                    </article>
+                </div>
+
+            </div>
+        </div>
+    </div>
+</section>
+
+
+
 {% endblock %}
